# Backend/src/configs/swagger.json
@@ -2,12 +2,12 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": "This is backend of Blog_App",
-    "termsOfService": "http://",
+    "title": "Blog API",
+    "description": "This is server of blog app",
+    "termsOfService": "\"http://www.clarusway.com/#\"",
     "contact": {
-      "name": "Mehmet Tanrıvermiş",
-      "email": "tanrivermis.mehmet@gmail.com"
+      "name": "Hüseyin Kaplan",
+      "email": "kplnhsyn.49@gmail.com"
     },
     "license": "ISC"
   },
@@ -22,7 +22,7 @@
       "type": "apiKey",
       "in": "header",
       "name": "Authorization",
-      "description": "SimpleToken Auth * Example: <b>Token <i>...tokenKey...</i></b>"
+      "description": "SimpleToken Auth * Example: <b>Token <i>...tokenKey...<i></b>"
     }
   },
   "consumes": [
@@ -37,7 +37,8 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "List Users",
+        "description": "\r  You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -50,7 +51,18 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "Create User",
+        "description": "Look to <b>'Models/User'</b> for parameters.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -63,6 +75,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Get Single User",
         "description": "",
         "parameters": [
           {
@@ -82,13 +95,22 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "Update User",
+        "description": "Look to <b>'Models/User'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -101,6 +123,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Delete User",
         "description": "",
         "parameters": [
           {
@@ -123,13 +146,22 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "Update User",
+        "description": "Look to <b>'Models/User'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -192,7 +224,8 @@
         "tags": [
           "Categories"
         ],
-        "description": "",
+        "summary": "List Category",
+        "description": "\r  You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -203,7 +236,18 @@
         "tags": [
           "Categories"
         ],
-        "description": "",
+        "summary": "Create Category",
+        "description": "Look to <b>'Models/Blog'</b> for parameters.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Category"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -216,6 +260,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Get Single Category",
         "description": "",
         "parameters": [
           {
@@ -235,6 +280,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Update Category",
         "description": "",
         "parameters": [
           {
@@ -242,6 +288,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -254,6 +309,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Delete Category",
         "description": "",
         "parameters": [
           {
@@ -276,6 +332,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Update Category",
         "description": "",
         "parameters": [
           {
@@ -283,6 +340,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -297,7 +363,8 @@
         "tags": [
           "Comments"
         ],
-        "description": "",
+        "summary": "Create Comment",
+        "description": "Look to <b>'Models/Comment'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
@@ -308,16 +375,9 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "user": {
-                  "example": "any"
-                },
-                "post": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Comment"
             }
           }
         ],
@@ -331,6 +391,7 @@
         "tags": [
           "Comments"
         ],
+        "summary": "Update Comment",
         "description": "",
         "parameters": [
           {
@@ -338,6 +399,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -350,6 +420,7 @@
         "tags": [
           "Comments"
         ],
+        "summary": "Delete Comment",
         "description": "",
         "parameters": [
           {
@@ -410,6 +481,7 @@
         "tags": [
           "Blogs"
         ],
+        "summary": "Get Single Blog",
         "description": "",
         "parameters": [
           {
@@ -429,6 +501,7 @@
         "tags": [
           "Blogs"
         ],
+        "summary": "Update Blog",
         "description": "",
         "parameters": [
           {
@@ -436,6 +509,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -448,6 +530,7 @@
         "tags": [
           "Blogs"
         ],
+        "summary": "Delete Blog",
         "description": "",
         "parameters": [
           {
@@ -470,6 +553,7 @@
         "tags": [
           "Blogs"
         ],
+        "summary": "Update Blog",
         "description": "",
         "parameters": [
           {
@@ -477,6 +561,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -491,7 +584,8 @@
         "tags": [
           "Likes"
         ],
-        "description": "",
+        "summary": "Create Blog",
+        "description": "Look to <b>'Models/Like'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
@@ -502,16 +596,9 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "user_id": {
-                  "example": "any"
-                },
-                "post_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Like"
             }
           }
         ],
@@ -548,6 +635,14 @@
             "index": {
               "type": "boolean",
               "example": true
+            },
+            "dataType": {
+              "type": "string",
+              "example": "string"
+            },
+            "exampleUsing": {
+              "type": "string",
+              "example": "title:test1"
             }
           }
         },
@@ -687,6 +782,14 @@
             "required": {
               "type": "boolean",
               "example": true
+            },
+            "dataType": {
+              "type": "string",
+              "example": "string"
+            },
+            "exampleUsing": {
+              "type": "string",
+              "example": "title:test1"
             }
           }
         },
@@ -699,6 +802,10 @@
             "required": {
               "type": "boolean",
               "example": true
+            },
+            "dataType": {
+              "type": "string",
+              "example": "string"
             }
           }
         },
@@ -711,6 +818,10 @@
             "trim": {
               "type": "boolean",
               "example": true
+            },
+            "dataType": {
+              "type": "string",
+              "example": "string"
             }
           }
         },
