# Backend/src/controllers/category.js
@@ -6,7 +6,6 @@
 const Category = require('../models/category')
 module.exports = {
     list: async (req, res) => {
-
         /*
             #swagger.tags = ["Categories"]
             #swagger.summary = "List Category"
@@ -18,22 +17,21 @@ module.exports = {
                     <li>URL/?<b>page=2&limit=1</b></li>
                 </ul>
             `
-            schema: {
+             schema: {
                     $ref: '#/definitions/Category'
                 }
         */
 
-        const data = await res.getModelList(Category)
+        const data = await res.getModelList(Category);
 
-        res.status(200).send(data)
+        res.status(200).send(data);
     },
     create: async (req, res) => {
-
         /*
             #swagger.tags = ["Categories"]
             #swagger.summary = "Create Category"
             #swagger.description = "Look to <b>'Models/Blog'</b> for parameters."
-            #swagger.parameters['body'] = {
+             #swagger.parameters['body'] = {
                 in: 'body',
                 required: 'true',
                 schema: {
@@ -42,29 +40,26 @@ module.exports = {
             }
         */
 
-
-        const data = await Category.create(req.body)
+        const data = await Category.create(req.body);
         res.status(201).send({
             error: false,
-            data
-        })
+            data,
+        });
     },
     read: async (req, res) => {
-
         /* #swagger.tags=['Categories']
         #swagger.summary = "Get Single Category"
          */
 
-        const data = await Category.findOne({ _id: req.params.id })
+        const data = await Category.findOne({ _id: req.params.id });
         res.status(200).send({
             error: false,
-            data
-        })
+            data,
+        });
     },
     update: async (req, res) => {
-
         /* #swagger.tags=['Categories']
-        #swagger.summary = "Update Category"
+         #swagger.summary = "Update Category"
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
@@ -73,23 +68,22 @@ module.exports = {
             }
          */
 
-        const data = await Category.updateOne({ _id: req.params.id }, req.body)
+        const data = await Category.updateOne({ _id: req.params.id }, req.body);
         res.status(202).send({
             error: false,
             data,
-            new: await Category.findOne({ _id: req.params.id })
-        })
+            new: await Category.findOne({ _id: req.params.id }),
+        });
     },
     delete: async (req, res) => {
-
         /* #swagger.tags=['Categories']
         #swagger.summary = "Delete Category"
          */
 
-        const data = await Category.deleteOne({ _id: req.params.id })
+        const data = await Category.deleteOne({ _id: req.params.id });
         res.status(data.deletedCount ? 204 : 404).send({
             error: !data.deletedCount,
-            data
-        })
+            data,
+        });
     },
 }
